--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-   <title>Data Collector for AGOL</title>
+   <title>TurtlMap</title>
 
 
    <style>
