--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   </head>
   <body>
 
-    <a href="https://survey123.arcgis.com/share/5b932b77c3fb49c29f0d885938675112"target="_blank" class="addRecordBtn">Add Record</a>
+    <a href="https://arcg.is/DnPa80"target="_blank" class="addRecordBtn">Add Record</a>
 
    <div id="viewDiv"></div>
 
