--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
         });
         
         // Create featurelayer from feature service 
-        const surveyLayer = new FeatureLayer({ 
+        const layer = new FeatureLayer({ 
         // URL to the service 
          url: "https://services.arcgis.com/LBbVDC0hKPAnLRpO/arcgis/rest/services/survey123_909b1e802b464d629b0b03f105e167ec_results/FeatureServer" //Your item URL Goes Here
     });
 
         //add the layer to the map
-        map.add(surveyLayer);
+        map.add(layer);
 
      //setting up the icon
-        const surveyLayer = {
+        const layer = {
         "type": "simple",
         "symbol": {
           "type": "picture-marker",
