--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         const view = new MapView({
         container: "viewDiv", // Reference to the DOM node that will contain the view
         map: map, // References the map object
-        center: [0,0], // Centers the view at null island
-        zoom: 3 // Sets the zoom level based on level of detail (LOD)
+        center: [-81.58, 27.94], // Centers the view at null island
+        zoom: 5 // Sets the zoom level based on level of detail (LOD)
 
         });
 
