--- a/index.html
+++ b/index.html
@@ -1,110 +1,98 @@
 <!DOCTYPE html>
- <html>
+<html>
   <head>
     <meta charset="utf-8" />
-<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <title>TurtlMap</title>
 
-   <title>TurtlMap</title>
+    <style>
+      html,
+      body,
+      #viewDiv {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        width: 100%;
+      }
+      .addRecordBtn {
+        position: "bottom-left";
+        z-index: 10;
+        top: 10px;
+        right: 10px;
+        background-color: #0079c1;
+        color: white;
+        padding: 8px 16px;
+        border: none;
+        border-radius: 4px;
+        font-size: 14px;
+        cursor: pointer;
+        text-decoration: none;
+      }
 
+      .addRecordBtn:hover {
+        background-color: #005a87;
+      }
+    </style>
 
-   <style>
-    html,
-    body,
-    #viewDiv {
-     padding: 0;
-     margin: 0;
-     height: 100%;
-     width: 100%;
-    }
-    //Add record button for survey
-    .addRecordBtn {
-    position: "bottom-left";
-    z-index: 10;
-    top: 10px;
-    right: 10px;
-    background-color: #0079c1;
-    color: white;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 4px;
-    font-size: 14px;
-    cursor: pointer;
-    text-decoration: none;
-    }
+    <link rel="stylesheet" href="https://js.arcgis.com/4.26/esri/themes/light/main.css" />
+    <script src="https://js.arcgis.com/4.26/"></script>
 
-    .addRecordBtn:hover {
-    background-color: #005a87;
-    }
-
-   </style>
-
-   <link rel="stylesheet" href="https://js.arcgis.com/4.26/esri/themes/light/main.css" />
-   <script src="https://js.arcgis.com/4.26/"></script>
-
-   <script>
-    require([ "esri/config", "esri/Map", "esri/views/MapView", "esri/widgets/Locate", "esri/widgets/Search", "esri/layers/FeatureLayer" ], (esriConfig, Map, MapView, Locate, Search, FeatureLayer) => {
-
+    <script>
+      require(["esri/config", "esri/Map", "esri/views/MapView", "esri/widgets/Locate", "esri/widgets/Search", "esri/layers/FeatureLayer"], function(esriConfig, Map, MapView, Locate, Search, FeatureLayer) {
         esriConfig.apiKey = "AAPTxy8BH1VEsoebNVZXo8HurGc-b1C5aUrht8KpAuN9a5q6Hl6E2t3P3ZF80nMW6US1rZJu6pkggjRB1xUmNDpf5oGDLc-4U4-Td-zpXeq1eZIjFTkZ2UQvn74bBNYc2ibH1Q10Ul61pdtuRIxTTMWgVb-7-Hd8_QUKPohD8gnlgKi2Cx_UUc6F6K8NoaVmbbPbUus1pQdDN7dyQFY4q81qnyKl61_6ZNHGdrGALPoP28E.AT1_hz92OE2q";
 
         const map = new Map({
-        basemap: "satellite"
+          basemap: "satellite"
         });
-        const view = new MapView({
-        container: "viewDiv", // Reference to the DOM node that will contain the view
-        map: map, // References the map object
-        center: [-81.58, 27.94], // Centers the view at null island
-        zoom: 5 // Sets the zoom level based on level of detail (LOD)
 
+        const view = new MapView({
+          container: "viewDiv",
+          map: map,
+          center: [-81.58, 27.94],
+          zoom: 5
         });
 
         const locateBtn = new Locate({
-          view: viewDiv
+          view: document.getElementById('viewDiv')
         });
 
-        //setting up the icon
         const turtleRenderer = {
-        "type": "simple",
-        "symbol": {
-          "type": "picture-marker",
-          "url": "https://raw.githubusercontent.com/chloeheynen/TurtlMap/refs/heads/main/istockphoto-1295939016-612x612-removebg-preview.png",
-          "width": "18px",
-          "height": "18px"
-        }
+          "type": "simple",
+          "symbol": {
+            "type": "picture-marker",
+            "url": "https://raw.githubusercontent.com/chloeheynen/TurtlMap/refs/heads/main/istockphoto-1295939016-612x612-removebg-preview.png",
+            "width": "18px",
+            "height": "18px"
+          }
+        };
 
-     
-        // Create featurelayer from feature service 
-        const layer = new FeatureLayer({ 
-        // URL to the service 
-         url: "https://services.arcgis.com/LBbVDC0hKPAnLRpO/arcgis/rest/services/survey123_909b1e802b464d629b0b03f105e167ec_results/FeatureServer" //Your item URL Goes Here
-         renderer: turtleRenderer,  //calling the icon
-    });
+        const layer = new FeatureLayer({
+          url: "https://services.arcgis.com/LBbVDC0hKPAnLRpO/arcgis/rest/services/survey123_909b1e802b464d629b0b03f105e167ec_results/FeatureServer",
+          outFields: ["*"],
+          renderer: turtleRenderer
+        });
 
-        //add the layer to the map
         map.add(layer);
 
-        // Add the locate widget to the top left corner of the view
         view.ui.add(locateBtn, {
           position: "top-left"
         });
 
         const search = new Search({
-          view: viewDiv
+          view: document.getElementById('viewDiv')
         });
 
         view.ui.add(search, {
           position: "top-right"
         });
-
-
-     });
+      });
     </script>
-
   </head>
   <body>
 
-    <a href="https://arcg.is/DnPa80"target="_blank" class="addRecordBtn">Add Record</a>
+    <a href="https://arcg.is/DnPa80" target="_blank" class="addRecordBtn">Add Record</a>
 
-   <div id="viewDiv"></div>
+    <div id="viewDiv"></div>
 
   </body>
 </html>
