--- a/index.html
+++ b/index.html
@@ -66,13 +66,35 @@
           }
         };
 
-        const layer = new FeatureLayer({
+        const turtleLabels = {
+        symbol: {
+          type: "text",
+          color: "#FFFFFF",
+          haloColor: "#5E8D74",
+          haloSize: "2px",
+          font: {
+            size: "12px",
+            family: "Noto Sans",
+            style: "italic",
+            weight: "normal"
+          }
+        },
+
+        labelPlacement: "above-center",
+        labelExpressionInfo: {
+          expression: "$feature.species", "$feature.field_5", "$feature.approximate_hatch_date", "$feature.nest_conditions_and_environment"
+        }
+      };
+
+        const turtleLayer = new FeatureLayer({
           url: "https://services.arcgis.com/LBbVDC0hKPAnLRpO/arcgis/rest/services/survey123_909b1e802b464d629b0b03f105e167ec_results/FeatureServer",
           outFields: ["*"],
-          renderer: turtleRenderer
+          renderer: turtleRenderer,
+
+          labelingInfo: [turtleLabels]
         });
 
-        map.add(layer);
+        map.add(turtleLayer);
 
         view.ui.add(locateBtn, {
           position: "top-left"
