--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         labelPlacement: "above-center",
         labelExpressionInfo: {
-          expression: "$feature.species", "$feature.field_5", "$feature.approximate_hatch_date", "$feature.nest_conditions_and_environment"
+          expression: ["$feature.species", "$feature.field_5", "$feature.approximate_hatch_date", "$feature.nest_conditions_and_environment"]
         }
       };
 
