--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
          //adding the popup here
           outFields: ["species","field_5","approximate_hatch_date","nest_conditions_and_environment","nest_id"],
           popupTemplate: popupTurtle,
-          renderer: turtleRenderer,
-          labelingInfo: [turtleLabels]
+          renderer: turtleRenderer
         });
 
         map.add(layer);
