--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ viirsLayer.when(() => {
         turtleLayer.visible = true;
         viirsLayer.visible = false;
       } else if (selectedLayer === "viirsLayer") {
-        turtleLayer.visible = false;
+        turtleLayer.visible = true;
         viirsLayer.visible = true;
       }
     });
